<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="ingresa_tu_edad">ingresa tu edad</string>
    <string name="aqui_estarna_mis_datos">aqui estarna mis datos</string>
    <string name="guardar_btn">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="go">Go</string>
    <string name="welcome_back">Welcome back</string>
    <string name="radio_botones">radio botones</string>
    <string name="three">three</string>
    <string name="two">Lps. 25</string>
    <string name="one">Lps. 50</string>
</resources>