<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.141">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_edad"
            android:layout_marginTop="20dp"
            android:text="@string/guardar_btn"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="429dp" />

        <Button
            android:id="@+id/btn_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_edad"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_save"
            android:text="@string/go"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="429dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/aqui_estarna_mis_datos"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="138dp" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="241dp"
            android:layout_height="47dp"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="223dp" />

        <EditText
            android:id="@+id/et_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_nombre"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ingresa_tu_edad"
            android:inputType="number"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="223dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.261">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_botones"
            android:textSize="30sp" />




        <RadioGroup
            android:layout_width="337dp"
            android:layout_height="102dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessParent">


            <RadioButton

                android:id="@+id/radio_pirates"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_radio"
                android:button="@android:color/transparent"
                android:elevation="10sp"
                android:padding="10dp"
                android:text="@string/two"
                android:textColor="@drawable/color_texto"
                android:textSize="20sp"
                tools:targetApi="lollipop" />

            <RadioButton
                android:id="@+id/radio_ninjas"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_radio"
                android:button="@android:color/transparent"
                android:elevation="10sp"
                android:padding="10dp"
                android:text="@string/one"
                android:textColor="@drawable/color_texto"
                android:textSize="20sp"
                tools:targetApi="lollipop" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>